parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    A

Grammar

Rule 0     S' -> prog
Rule 1     prog -> PROG prog1 princ AC locales Bloque CC
Rule 2     princ -> PRINC
Rule 3     locales -> var
Rule 4     prog1 -> prog2 prog3
Rule 5     prog2 -> globales
Rule 6     prog3 -> Funciones prog3
Rule 7     prog3 -> vacia
Rule 8     Funciones -> Fun1 varFunciones Bloque
Rule 9     Fun1 -> fBloque fID AP func CP
Rule 10    fID -> ID
Rule 11    fBloque -> FUNCION FTipo
Rule 12    FTipo -> VOID
Rule 13    FTipo -> tipo
Rule 14    func -> fun1 fun2
Rule 15    func -> vacia
Rule 16    fun2 -> C fun1 fun2
Rule 17    fun2 -> vacia
Rule 18    fun1 -> tipo arreglo ID arrD
Rule 19    arreglo -> P
Rule 20    arreglo -> vacia
Rule 21    arrD -> AC exp CC
Rule 22    arrD -> vacia
Rule 23    Regresar -> RT Regresar2 PC
Rule 24    Regresar2 -> exp
Rule 25    Regresar2 -> vacia
Rule 26    globales -> glob var
Rule 27    globales -> vacia
Rule 28    glob -> GL
Rule 29    varFunciones -> var
Rule 30    var -> V var11
Rule 31    var -> vacia
Rule 32    var11 -> tipo var1 PC var11
Rule 33    var11 -> vacia
Rule 34    var1 -> varSalvar var2 var23 var3
Rule 35    var3 -> C varSalvar var2 var23 var3
Rule 36    var3 -> vacia
Rule 37    varSalvar -> ID
Rule 38    var23 -> IG var4
Rule 39    var23 -> vacia
Rule 40    var2 -> AC var21
Rule 41    var2 -> LB var22
Rule 42    var2 -> vacia
Rule 43    var4 -> exp
Rule 44    var4 -> LB AP exp C exp CP var41 RB
Rule 45    var4 -> AC exp var42 CC
Rule 46    var41 -> C AP exp C exp CP var41
Rule 47    var41 -> vacia
Rule 48    var42 -> C exp var42
Rule 49    var42 -> vacia
Rule 50    var21 -> exp CC
Rule 51    var22 -> exp RB
Rule 52    tipo -> ENT
Rule 53    tipo -> FLOT
Rule 54    position -> XY AP exp C exp CP PC
Rule 55    colors -> CONTORNO AP exp C exp C exp CP PC
Rule 56    colors -> RELLENO AP exp C exp C exp CP PC
Rule 57    p_Width -> GROSOR AP exp CP PC
Rule 58    penwrite -> PX AP exp CP PC
Rule 59    penwrite -> PY AP exp CP PC
Rule 60    Cuadrado -> REC AP exp C exp p_fill CP PC
Rule 61    p_fill -> C Fondo
Rule 62    p_fill -> vacia
Rule 63    Triangulo -> TRI AP AC exp C exp CC C AC exp C exp CC C AC exp C exp CC p_fill CP PC
Rule 64    uno_par -> CIR AP exp p_fill CP PC
Rule 65    uno_par -> SQ AP exp p_fill CP PC
Rule 66    Poligono -> POL AP idList p_fill CP PC
Rule 67    Linea -> LS AP idList CP PC
Rule 68    idList -> ID
Rule 69    Arco -> ARC AP exp p_fill CP PC
Rule 70    Texto -> LA AP STR CP PC
Rule 71    expresion -> exp ex2
Rule 72    ex2 -> ex3 exp
Rule 73    ex2 -> vacia
Rule 74    ex3 -> LT
Rule 75    ex3 -> MT
Rule 76    ex3 -> D
Rule 77    ex3 -> SEQ
Rule 78    ex3 -> LET
Rule 79    ex3 -> MET
Rule 80    exp -> Termino exprog2
Rule 81    exprog2 -> exp4 exprog3 exp
Rule 82    exprog2 -> exp4 vacia
Rule 83    exp4 -> vacia
Rule 84    exprog3 -> ADD
Rule 85    exprog3 -> SUB
Rule 86    Termino -> Factor Termino2
Rule 87    Termino2 -> Termino4 Termino3 Termino
Rule 88    Termino2 -> Termino4 vacia
Rule 89    Termino4 -> vacia
Rule 90    Termino3 -> M
Rule 91    Termino3 -> DIV
Rule 92    Factor -> Factor2 exp CP
Rule 93    Factor -> Factor4
Rule 94    Factor2 -> AP
Rule 95    Factor4 -> varCte
Rule 96    Factor4 -> faID Factor5
Rule 97    faID -> ID
Rule 98    Factor5 -> AC exp CC
Rule 99    Factor5 -> LB exp RB
Rule 100   Factor5 -> Llamada
Rule 101   Factor5 -> vacia
Rule 102   varCte -> VALI
Rule 103   varCte -> VALF
Rule 104   Ciclo -> RE Cicloprog3 Bloque
Rule 105   Cicloprog3 -> varCte
Rule 106   Cicloprog3 -> ID
Rule 107   Asignacion -> faID Factor5 Asignacion2
Rule 108   Asignacion2 -> Asigna
Rule 109   Asignacion2 -> PC
Rule 110   Asigna -> IG AsignaT
Rule 111   AsignaT -> exp PC
Rule 112   AsignaT -> lAsigna
Rule 113   Llamada -> funEra func2 CP
Rule 114   funEra -> AP
Rule 115   func2 -> func4 func3
Rule 116   func2 -> vacia
Rule 117   func3 -> C func4 func3
Rule 118   func3 -> vacia
Rule 119   func4 -> exp
Rule 120   lAsigna -> LB exp C exp RB PC
Rule 121   Condicion -> SI AP expresion condicion2 Bloque condicion3
Rule 122   condicion2 -> CP
Rule 123   condicion3 -> vacia
Rule 124   condicion3 -> con3 Bloque
Rule 125   con3 -> SINO
Rule 126   Bloque -> LB Bloque3 RB
Rule 127   Bloque3 -> Estatuto Bloque3
Rule 128   Bloque3 -> vacia
Rule 129   Objeto -> Cuadrado
Rule 130   Objeto -> Triangulo
Rule 131   Objeto -> Poligono
Rule 132   Objeto -> Linea
Rule 133   Objeto -> uno_par
Rule 134   Objeto -> Arco
Rule 135   Objeto -> Texto
Rule 136   Estatuto -> Objeto
Rule 137   Estatuto -> Condicion
Rule 138   Estatuto -> Asignacion
Rule 139   Estatuto -> Ciclo
Rule 140   Estatuto -> Regresar
Rule 141   pen -> colors
Rule 142   pen -> p_Width
Rule 143   pen -> position
Rule 144   pen -> penwrite
Rule 145   vacia -> <empty>

Terminals, with rules where they appear

A                    : 
AC                   : 1 21 40 45 63 63 63 98
ADD                  : 84
AP                   : 9 44 46 54 55 56 57 58 59 60 63 64 65 66 67 69 70 94 114 121
ARC                  : 69
C                    : 16 35 44 46 46 48 54 55 55 56 56 60 61 63 63 63 63 63 117 120
CC                   : 1 21 45 50 63 63 63 98
CIR                  : 64
CONTORNO             : 55
CP                   : 9 44 46 54 55 56 57 58 59 60 63 64 65 66 67 69 70 92 113 122
D                    : 76
DIV                  : 91
ENT                  : 52
FLOT                 : 53
FUNCION              : 11
Fondo                : 61
GL                   : 28
GROSOR               : 57
ID                   : 10 18 37 68 97 106
IG                   : 38 110
LA                   : 70
LB                   : 41 44 99 120 126
LET                  : 78
LS                   : 67
LT                   : 74
M                    : 90
MET                  : 79
MT                   : 75
P                    : 19
PC                   : 23 32 54 55 56 57 58 59 60 63 64 65 66 67 69 70 109 111 120
POL                  : 66
PRINC                : 2
PROG                 : 1
PX                   : 58
PY                   : 59
RB                   : 44 51 99 120 126
RE                   : 104
REC                  : 60
RELLENO              : 56
RT                   : 23
SEQ                  : 77
SI                   : 121
SINO                 : 125
SQ                   : 65
STR                  : 70
SUB                  : 85
TRI                  : 63
V                    : 30
VALF                 : 103
VALI                 : 102
VOID                 : 12
XY                   : 54
error                : 

Nonterminals, with rules where they appear

Arco                 : 134
Asigna               : 108
AsignaT              : 110
Asignacion           : 138
Asignacion2          : 107
Bloque               : 1 8 104 121 124
Bloque3              : 126 127
Ciclo                : 139
Cicloprog3           : 104
Condicion            : 137
Cuadrado             : 129
Estatuto             : 127
FTipo                : 11
Factor               : 86
Factor2              : 92
Factor4              : 93
Factor5              : 96 107
Fun1                 : 8
Funciones            : 6
Linea                : 132
Llamada              : 100
Objeto               : 136
Poligono             : 131
Regresar             : 140
Regresar2            : 23
Termino              : 80 87
Termino2             : 86
Termino3             : 87
Termino4             : 87 88
Texto                : 135
Triangulo            : 130
arrD                 : 18
arreglo              : 18
colors               : 141
con3                 : 124
condicion2           : 121
condicion3           : 121
ex2                  : 71
ex3                  : 72
exp                  : 21 24 43 44 44 45 46 46 48 50 51 54 54 55 55 55 56 56 56 57 58 59 60 60 63 63 63 63 63 63 64 65 69 71 72 81 92 98 99 111 119 120 120
exp4                 : 81 82
expresion            : 121
exprog2              : 80
exprog3              : 81
fBloque              : 9
fID                  : 9
faID                 : 96 107
fun1                 : 14 16
fun2                 : 14 16
funEra               : 113
func                 : 9
func2                : 113
func3                : 115 117
func4                : 115 117
glob                 : 26
globales             : 5
idList               : 66 67
lAsigna              : 112
locales              : 1
p_Width              : 142
p_fill               : 60 63 64 65 66 69
pen                  : 
penwrite             : 144
position             : 143
princ                : 1
prog                 : 0
prog1                : 1
prog2                : 4
prog3                : 4 6
tipo                 : 13 18 32
uno_par              : 133
vacia                : 7 15 17 20 22 25 27 31 33 36 39 42 47 49 62 73 82 83 88 89 101 116 118 123 128
var                  : 3 26 29
var1                 : 32
var11                : 30 32
var2                 : 34 35
var21                : 40
var22                : 41
var23                : 34 35
var3                 : 34 35
var4                 : 38
var41                : 44 46
var42                : 45 48
varCte               : 95 105
varFunciones         : 8
varSalvar            : 34 35

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . PROG prog1 princ AC locales Bloque CC

    PROG            shift and go to state 1

    prog                           shift and go to state 2

state 1

    (1) prog -> PROG . prog1 princ AC locales Bloque CC
    (4) prog1 -> . prog2 prog3
    (5) prog2 -> . globales
    (26) globales -> . glob var
    (27) globales -> . vacia
    (28) glob -> . GL
    (145) vacia -> .

    GL              shift and go to state 7
    FUNCION         reduce using rule 145 (vacia -> .)
    PRINC           reduce using rule 145 (vacia -> .)

    prog1                          shift and go to state 3
    vacia                          shift and go to state 4
    prog2                          shift and go to state 5
    glob                           shift and go to state 6
    globales                       shift and go to state 8

state 2

    (0) S' -> prog .



state 3

    (1) prog -> PROG prog1 . princ AC locales Bloque CC
    (2) princ -> . PRINC

    PRINC           shift and go to state 10

    princ                          shift and go to state 9

state 4

    (27) globales -> vacia .

    FUNCION         reduce using rule 27 (globales -> vacia .)
    PRINC           reduce using rule 27 (globales -> vacia .)


state 5

    (4) prog1 -> prog2 . prog3
    (6) prog3 -> . Funciones prog3
    (7) prog3 -> . vacia
    (8) Funciones -> . Fun1 varFunciones Bloque
    (145) vacia -> .
    (9) Fun1 -> . fBloque fID AP func CP
    (11) fBloque -> . FUNCION FTipo

    PRINC           reduce using rule 145 (vacia -> .)
    FUNCION         shift and go to state 16

    vacia                          shift and go to state 11
    prog3                          shift and go to state 12
    Fun1                           shift and go to state 13
    fBloque                        shift and go to state 14
    Funciones                      shift and go to state 15

state 6

    (26) globales -> glob . var
    (30) var -> . V var11
    (31) var -> . vacia
    (145) vacia -> .

    V               shift and go to state 19
    FUNCION         reduce using rule 145 (vacia -> .)
    PRINC           reduce using rule 145 (vacia -> .)

    var                            shift and go to state 17
    vacia                          shift and go to state 18

state 7

    (28) glob -> GL .

    V               reduce using rule 28 (glob -> GL .)
    FUNCION         reduce using rule 28 (glob -> GL .)
    PRINC           reduce using rule 28 (glob -> GL .)


state 8

    (5) prog2 -> globales .

    FUNCION         reduce using rule 5 (prog2 -> globales .)
    PRINC           reduce using rule 5 (prog2 -> globales .)


state 9

    (1) prog -> PROG prog1 princ . AC locales Bloque CC

    AC              shift and go to state 20


state 10

    (2) princ -> PRINC .

    AC              reduce using rule 2 (princ -> PRINC .)


state 11

    (7) prog3 -> vacia .

    PRINC           reduce using rule 7 (prog3 -> vacia .)


state 12

    (4) prog1 -> prog2 prog3 .

    PRINC           reduce using rule 4 (prog1 -> prog2 prog3 .)


state 13

    (8) Funciones -> Fun1 . varFunciones Bloque
    (29) varFunciones -> . var
    (30) var -> . V var11
    (31) var -> . vacia
    (145) vacia -> .

    V               shift and go to state 19
    LB              reduce using rule 145 (vacia -> .)

    vacia                          shift and go to state 18
    varFunciones                   shift and go to state 21
    var                            shift and go to state 22

state 14

    (9) Fun1 -> fBloque . fID AP func CP
    (10) fID -> . ID

    ID              shift and go to state 24

    fID                            shift and go to state 23

state 15

    (6) prog3 -> Funciones . prog3
    (6) prog3 -> . Funciones prog3
    (7) prog3 -> . vacia
    (8) Funciones -> . Fun1 varFunciones Bloque
    (145) vacia -> .
    (9) Fun1 -> . fBloque fID AP func CP
    (11) fBloque -> . FUNCION FTipo

    PRINC           reduce using rule 145 (vacia -> .)
    FUNCION         shift and go to state 16

    vacia                          shift and go to state 11
    prog3                          shift and go to state 25
    Fun1                           shift and go to state 13
    fBloque                        shift and go to state 14
    Funciones                      shift and go to state 15

state 16

    (11) fBloque -> FUNCION . FTipo
    (12) FTipo -> . VOID
    (13) FTipo -> . tipo
    (52) tipo -> . ENT
    (53) tipo -> . FLOT

    VOID            shift and go to state 28
    ENT             shift and go to state 30
    FLOT            shift and go to state 29

    FTipo                          shift and go to state 27
    tipo                           shift and go to state 26

state 17

    (26) globales -> glob var .

    FUNCION         reduce using rule 26 (globales -> glob var .)
    PRINC           reduce using rule 26 (globales -> glob var .)


state 18

    (31) var -> vacia .

    LB              reduce using rule 31 (var -> vacia .)
    FUNCION         reduce using rule 31 (var -> vacia .)
    PRINC           reduce using rule 31 (var -> vacia .)


state 19

    (30) var -> V . var11
    (32) var11 -> . tipo var1 PC var11
    (33) var11 -> . vacia
    (52) tipo -> . ENT
    (53) tipo -> . FLOT
    (145) vacia -> .

    ENT             shift and go to state 30
    FLOT            shift and go to state 29
    FUNCION         reduce using rule 145 (vacia -> .)
    PRINC           reduce using rule 145 (vacia -> .)
    LB              reduce using rule 145 (vacia -> .)

    var11                          shift and go to state 33
    tipo                           shift and go to state 32
    vacia                          shift and go to state 31

state 20

    (1) prog -> PROG prog1 princ AC . locales Bloque CC
    (3) locales -> . var
    (30) var -> . V var11
    (31) var -> . vacia
    (145) vacia -> .

    V               shift and go to state 19
    LB              reduce using rule 145 (vacia -> .)

    vacia                          shift and go to state 18
    var                            shift and go to state 34
    locales                        shift and go to state 35

state 21

    (8) Funciones -> Fun1 varFunciones . Bloque
    (126) Bloque -> . LB Bloque3 RB

    LB              shift and go to state 36

    Bloque                         shift and go to state 37

state 22

    (29) varFunciones -> var .

    LB              reduce using rule 29 (varFunciones -> var .)


state 23

    (9) Fun1 -> fBloque fID . AP func CP

    AP              shift and go to state 38


state 24

    (10) fID -> ID .

    AP              reduce using rule 10 (fID -> ID .)


state 25

    (6) prog3 -> Funciones prog3 .

    PRINC           reduce using rule 6 (prog3 -> Funciones prog3 .)


state 26

    (13) FTipo -> tipo .

    ID              reduce using rule 13 (FTipo -> tipo .)


state 27

    (11) fBloque -> FUNCION FTipo .

    ID              reduce using rule 11 (fBloque -> FUNCION FTipo .)


state 28

    (12) FTipo -> VOID .

    ID              reduce using rule 12 (FTipo -> VOID .)


state 29

    (53) tipo -> FLOT .

    ID              reduce using rule 53 (tipo -> FLOT .)
    P               reduce using rule 53 (tipo -> FLOT .)


state 30

    (52) tipo -> ENT .

    ID              reduce using rule 52 (tipo -> ENT .)
    P               reduce using rule 52 (tipo -> ENT .)


state 31

    (33) var11 -> vacia .

    FUNCION         reduce using rule 33 (var11 -> vacia .)
    PRINC           reduce using rule 33 (var11 -> vacia .)
    LB              reduce using rule 33 (var11 -> vacia .)


state 32

    (32) var11 -> tipo . var1 PC var11
    (34) var1 -> . varSalvar var2 var23 var3
    (37) varSalvar -> . ID

    ID              shift and go to state 41

    var1                           shift and go to state 39
    varSalvar                      shift and go to state 40

state 33

    (30) var -> V var11 .

    LB              reduce using rule 30 (var -> V var11 .)
    FUNCION         reduce using rule 30 (var -> V var11 .)
    PRINC           reduce using rule 30 (var -> V var11 .)


state 34

    (3) locales -> var .

    LB              reduce using rule 3 (locales -> var .)


state 35

    (1) prog -> PROG prog1 princ AC locales . Bloque CC
    (126) Bloque -> . LB Bloque3 RB

    LB              shift and go to state 36

    Bloque                         shift and go to state 42

state 36

    (126) Bloque -> LB . Bloque3 RB
    (127) Bloque3 -> . Estatuto Bloque3
    (128) Bloque3 -> . vacia
    (136) Estatuto -> . Objeto
    (137) Estatuto -> . Condicion
    (138) Estatuto -> . Asignacion
    (139) Estatuto -> . Ciclo
    (140) Estatuto -> . Regresar
    (145) vacia -> .
    (129) Objeto -> . Cuadrado
    (130) Objeto -> . Triangulo
    (131) Objeto -> . Poligono
    (132) Objeto -> . Linea
    (133) Objeto -> . uno_par
    (134) Objeto -> . Arco
    (135) Objeto -> . Texto
    (121) Condicion -> . SI AP expresion condicion2 Bloque condicion3
    (107) Asignacion -> . faID Factor5 Asignacion2
    (104) Ciclo -> . RE Cicloprog3 Bloque
    (23) Regresar -> . RT Regresar2 PC
    (60) Cuadrado -> . REC AP exp C exp p_fill CP PC
    (63) Triangulo -> . TRI AP AC exp C exp CC C AC exp C exp CC C AC exp C exp CC p_fill CP PC
    (66) Poligono -> . POL AP idList p_fill CP PC
    (67) Linea -> . LS AP idList CP PC
    (64) uno_par -> . CIR AP exp p_fill CP PC
    (65) uno_par -> . SQ AP exp p_fill CP PC
    (69) Arco -> . ARC AP exp p_fill CP PC
    (70) Texto -> . LA AP STR CP PC
    (97) faID -> . ID

    RB              reduce using rule 145 (vacia -> .)
    SI              shift and go to state 69
    RE              shift and go to state 53
    RT              shift and go to state 52
    REC             shift and go to state 50
    TRI             shift and go to state 44
    POL             shift and go to state 55
    LS              shift and go to state 57
    CIR             shift and go to state 48
    SQ              shift and go to state 66
    ARC             shift and go to state 56
    LA              shift and go to state 67
    ID              shift and go to state 61

    Triangulo                      shift and go to state 43
    Objeto                         shift and go to state 45
    Estatuto                       shift and go to state 46
    faID                           shift and go to state 47
    Cuadrado                       shift and go to state 70
    Ciclo                          shift and go to state 51
    Regresar                       shift and go to state 62
    Poligono                       shift and go to state 54
    Arco                           shift and go to state 58
    Bloque3                        shift and go to state 59
    Asignacion                     shift and go to state 60
    Linea                          shift and go to state 63
    vacia                          shift and go to state 64
    uno_par                        shift and go to state 65
    Texto                          shift and go to state 68
    Condicion                      shift and go to state 49

state 37

    (8) Funciones -> Fun1 varFunciones Bloque .

    FUNCION         reduce using rule 8 (Funciones -> Fun1 varFunciones Bloque .)
    PRINC           reduce using rule 8 (Funciones -> Fun1 varFunciones Bloque .)


state 38

    (9) Fun1 -> fBloque fID AP . func CP
    (14) func -> . fun1 fun2
    (15) func -> . vacia
    (18) fun1 -> . tipo arreglo ID arrD
    (145) vacia -> .
    (52) tipo -> . ENT
    (53) tipo -> . FLOT

    CP              reduce using rule 145 (vacia -> .)
    ENT             shift and go to state 30
    FLOT            shift and go to state 29

    vacia                          shift and go to state 71
    fun1                           shift and go to state 72
    tipo                           shift and go to state 73
    func                           shift and go to state 74

state 39

    (32) var11 -> tipo var1 . PC var11

    PC              shift and go to state 75


state 40

    (34) var1 -> varSalvar . var2 var23 var3
    (40) var2 -> . AC var21
    (41) var2 -> . LB var22
    (42) var2 -> . vacia
    (145) vacia -> .

    AC              shift and go to state 77
    LB              shift and go to state 78
    IG              reduce using rule 145 (vacia -> .)
    C               reduce using rule 145 (vacia -> .)
    PC              reduce using rule 145 (vacia -> .)

    vacia                          shift and go to state 76
    var2                           shift and go to state 79

state 41

    (37) varSalvar -> ID .

    AC              reduce using rule 37 (varSalvar -> ID .)
    LB              reduce using rule 37 (varSalvar -> ID .)
    IG              reduce using rule 37 (varSalvar -> ID .)
    C               reduce using rule 37 (varSalvar -> ID .)
    PC              reduce using rule 37 (varSalvar -> ID .)


state 42

    (1) prog -> PROG prog1 princ AC locales Bloque . CC

    CC              shift and go to state 80


state 43

    (130) Objeto -> Triangulo .

    SI              reduce using rule 130 (Objeto -> Triangulo .)
    RE              reduce using rule 130 (Objeto -> Triangulo .)
    RT              reduce using rule 130 (Objeto -> Triangulo .)
    REC             reduce using rule 130 (Objeto -> Triangulo .)
    TRI             reduce using rule 130 (Objeto -> Triangulo .)
    POL             reduce using rule 130 (Objeto -> Triangulo .)
    LS              reduce using rule 130 (Objeto -> Triangulo .)
    CIR             reduce using rule 130 (Objeto -> Triangulo .)
    SQ              reduce using rule 130 (Objeto -> Triangulo .)
    ARC             reduce using rule 130 (Objeto -> Triangulo .)
    LA              reduce using rule 130 (Objeto -> Triangulo .)
    ID              reduce using rule 130 (Objeto -> Triangulo .)
    RB              reduce using rule 130 (Objeto -> Triangulo .)


state 44

    (63) Triangulo -> TRI . AP AC exp C exp CC C AC exp C exp CC C AC exp C exp CC p_fill CP PC

    AP              shift and go to state 81


state 45

    (136) Estatuto -> Objeto .

    SI              reduce using rule 136 (Estatuto -> Objeto .)
    RE              reduce using rule 136 (Estatuto -> Objeto .)
    RT              reduce using rule 136 (Estatuto -> Objeto .)
    REC             reduce using rule 136 (Estatuto -> Objeto .)
    TRI             reduce using rule 136 (Estatuto -> Objeto .)
    POL             reduce using rule 136 (Estatuto -> Objeto .)
    LS              reduce using rule 136 (Estatuto -> Objeto .)
    CIR             reduce using rule 136 (Estatuto -> Objeto .)
    SQ              reduce using rule 136 (Estatuto -> Objeto .)
    ARC             reduce using rule 136 (Estatuto -> Objeto .)
    LA              reduce using rule 136 (Estatuto -> Objeto .)
    ID              reduce using rule 136 (Estatuto -> Objeto .)
    RB              reduce using rule 136 (Estatuto -> Objeto .)


state 46

    (127) Bloque3 -> Estatuto . Bloque3
    (127) Bloque3 -> . Estatuto Bloque3
    (128) Bloque3 -> . vacia
    (136) Estatuto -> . Objeto
    (137) Estatuto -> . Condicion
    (138) Estatuto -> . Asignacion
    (139) Estatuto -> . Ciclo
    (140) Estatuto -> . Regresar
    (145) vacia -> .
    (129) Objeto -> . Cuadrado
    (130) Objeto -> . Triangulo
    (131) Objeto -> . Poligono
    (132) Objeto -> . Linea
    (133) Objeto -> . uno_par
    (134) Objeto -> . Arco
    (135) Objeto -> . Texto
    (121) Condicion -> . SI AP expresion condicion2 Bloque condicion3
    (107) Asignacion -> . faID Factor5 Asignacion2
    (104) Ciclo -> . RE Cicloprog3 Bloque
    (23) Regresar -> . RT Regresar2 PC
    (60) Cuadrado -> . REC AP exp C exp p_fill CP PC
    (63) Triangulo -> . TRI AP AC exp C exp CC C AC exp C exp CC C AC exp C exp CC p_fill CP PC
    (66) Poligono -> . POL AP idList p_fill CP PC
    (67) Linea -> . LS AP idList CP PC
    (64) uno_par -> . CIR AP exp p_fill CP PC
    (65) uno_par -> . SQ AP exp p_fill CP PC
    (69) Arco -> . ARC AP exp p_fill CP PC
    (70) Texto -> . LA AP STR CP PC
    (97) faID -> . ID

    RB              reduce using rule 145 (vacia -> .)
    SI              shift and go to state 69
    RE              shift and go to state 53
    RT              shift and go to state 52
    REC             shift and go to state 50
    TRI             shift and go to state 44
    POL             shift and go to state 55
    LS              shift and go to state 57
    CIR             shift and go to state 48
    SQ              shift and go to state 66
    ARC             shift and go to state 56
    LA              shift and go to state 67
    ID              shift and go to state 61

    Triangulo                      shift and go to state 43
    Objeto                         shift and go to state 45
    Estatuto                       shift and go to state 46
    faID                           shift and go to state 47
    Cuadrado                       shift and go to state 70
    Ciclo                          shift and go to state 51
    Regresar                       shift and go to state 62
    Poligono                       shift and go to state 54
    Arco                           shift and go to state 58
    Bloque3                        shift and go to state 82
    Asignacion                     shift and go to state 60
    Linea                          shift and go to state 63
    vacia                          shift and go to state 64
    uno_par                        shift and go to state 65
    Texto                          shift and go to state 68
    Condicion                      shift and go to state 49

state 47

    (107) Asignacion -> faID . Factor5 Asignacion2
    (98) Factor5 -> . AC exp CC
    (99) Factor5 -> . LB exp RB
    (100) Factor5 -> . Llamada
    (101) Factor5 -> . vacia
    (113) Llamada -> . funEra func2 CP
    (145) vacia -> .
    (114) funEra -> . AP

    AC              shift and go to state 84
    LB              shift and go to state 85
    PC              reduce using rule 145 (vacia -> .)
    IG              reduce using rule 145 (vacia -> .)
    AP              shift and go to state 89

    Factor5                        shift and go to state 83
    vacia                          shift and go to state 86
    funEra                         shift and go to state 87
    Llamada                        shift and go to state 88

state 48

    (64) uno_par -> CIR . AP exp p_fill CP PC

    AP              shift and go to state 90


state 49

    (137) Estatuto -> Condicion .

    SI              reduce using rule 137 (Estatuto -> Condicion .)
    RE              reduce using rule 137 (Estatuto -> Condicion .)
    RT              reduce using rule 137 (Estatuto -> Condicion .)
    REC             reduce using rule 137 (Estatuto -> Condicion .)
    TRI             reduce using rule 137 (Estatuto -> Condicion .)
    POL             reduce using rule 137 (Estatuto -> Condicion .)
    LS              reduce using rule 137 (Estatuto -> Condicion .)
    CIR             reduce using rule 137 (Estatuto -> Condicion .)
    SQ              reduce using rule 137 (Estatuto -> Condicion .)
    ARC             reduce using rule 137 (Estatuto -> Condicion .)
    LA              reduce using rule 137 (Estatuto -> Condicion .)
    ID              reduce using rule 137 (Estatuto -> Condicion .)
    RB              reduce using rule 137 (Estatuto -> Condicion .)


state 50

    (60) Cuadrado -> REC . AP exp C exp p_fill CP PC

    AP              shift and go to state 91


state 51

    (139) Estatuto -> Ciclo .

    SI              reduce using rule 139 (Estatuto -> Ciclo .)
    RE              reduce using rule 139 (Estatuto -> Ciclo .)
    RT              reduce using rule 139 (Estatuto -> Ciclo .)
    REC             reduce using rule 139 (Estatuto -> Ciclo .)
    TRI             reduce using rule 139 (Estatuto -> Ciclo .)
    POL             reduce using rule 139 (Estatuto -> Ciclo .)
    LS              reduce using rule 139 (Estatuto -> Ciclo .)
    CIR             reduce using rule 139 (Estatuto -> Ciclo .)
    SQ              reduce using rule 139 (Estatuto -> Ciclo .)
    ARC             reduce using rule 139 (Estatuto -> Ciclo .)
    LA              reduce using rule 139 (Estatuto -> Ciclo .)
    ID              reduce using rule 139 (Estatuto -> Ciclo .)
    RB              reduce using rule 139 (Estatuto -> Ciclo .)


state 52

    (23) Regresar -> RT . Regresar2 PC
    (24) Regresar2 -> . exp
    (25) Regresar2 -> . vacia
    (80) exp -> . Termino exprog2
    (145) vacia -> .
    (86) Termino -> . Factor Termino2
    (92) Factor -> . Factor2 exp CP
    (93) Factor -> . Factor4
    (94) Factor2 -> . AP
    (95) Factor4 -> . varCte
    (96) Factor4 -> . faID Factor5
    (102) varCte -> . VALI
    (103) varCte -> . VALF
    (97) faID -> . ID

    PC              reduce using rule 145 (vacia -> .)
    AP              shift and go to state 97
    VALI            shift and go to state 93
    VALF            shift and go to state 98
    ID              shift and go to state 61

    Factor4                        shift and go to state 100
    vacia                          shift and go to state 92
    Regresar2                      shift and go to state 94
    varCte                         shift and go to state 95
    Factor2                        shift and go to state 96
    faID                           shift and go to state 99
    Termino                        shift and go to state 101
    exp                            shift and go to state 102
    Factor                         shift and go to state 103

state 53

    (104) Ciclo -> RE . Cicloprog3 Bloque
    (105) Cicloprog3 -> . varCte
    (106) Cicloprog3 -> . ID
    (102) varCte -> . VALI
    (103) varCte -> . VALF

    ID              shift and go to state 106
    VALI            shift and go to state 93
    VALF            shift and go to state 98

    Cicloprog3                     shift and go to state 105
    varCte                         shift and go to state 104

state 54

    (131) Objeto -> Poligono .

    SI              reduce using rule 131 (Objeto -> Poligono .)
    RE              reduce using rule 131 (Objeto -> Poligono .)
    RT              reduce using rule 131 (Objeto -> Poligono .)
    REC             reduce using rule 131 (Objeto -> Poligono .)
    TRI             reduce using rule 131 (Objeto -> Poligono .)
    POL             reduce using rule 131 (Objeto -> Poligono .)
    LS              reduce using rule 131 (Objeto -> Poligono .)
    CIR             reduce using rule 131 (Objeto -> Poligono .)
    SQ              reduce using rule 131 (Objeto -> Poligono .)
    ARC             reduce using rule 131 (Objeto -> Poligono .)
    LA              reduce using rule 131 (Objeto -> Poligono .)
    ID              reduce using rule 131 (Objeto -> Poligono .)
    RB              reduce using rule 131 (Objeto -> Poligono .)


state 55

    (66) Poligono -> POL . AP idList p_fill CP PC

    AP              shift and go to state 107


state 56

    (69) Arco -> ARC . AP exp p_fill CP PC

    AP              shift and go to state 108


state 57

    (67) Linea -> LS . AP idList CP PC

    AP              shift and go to state 109


state 58

    (134) Objeto -> Arco .

    SI              reduce using rule 134 (Objeto -> Arco .)
    RE              reduce using rule 134 (Objeto -> Arco .)
    RT              reduce using rule 134 (Objeto -> Arco .)
    REC             reduce using rule 134 (Objeto -> Arco .)
    TRI             reduce using rule 134 (Objeto -> Arco .)
    POL             reduce using rule 134 (Objeto -> Arco .)
    LS              reduce using rule 134 (Objeto -> Arco .)
    CIR             reduce using rule 134 (Objeto -> Arco .)
    SQ              reduce using rule 134 (Objeto -> Arco .)
    ARC             reduce using rule 134 (Objeto -> Arco .)
    LA              reduce using rule 134 (Objeto -> Arco .)
    ID              reduce using rule 134 (Objeto -> Arco .)
    RB              reduce using rule 134 (Objeto -> Arco .)


state 59

    (126) Bloque -> LB Bloque3 . RB

    RB              shift and go to state 110


state 60

    (138) Estatuto -> Asignacion .

    SI              reduce using rule 138 (Estatuto -> Asignacion .)
    RE              reduce using rule 138 (Estatuto -> Asignacion .)
    RT              reduce using rule 138 (Estatuto -> Asignacion .)
    REC             reduce using rule 138 (Estatuto -> Asignacion .)
    TRI             reduce using rule 138 (Estatuto -> Asignacion .)
    POL             reduce using rule 138 (Estatuto -> Asignacion .)
    LS              reduce using rule 138 (Estatuto -> Asignacion .)
    CIR             reduce using rule 138 (Estatuto -> Asignacion .)
    SQ              reduce using rule 138 (Estatuto -> Asignacion .)
    ARC             reduce using rule 138 (Estatuto -> Asignacion .)
    LA              reduce using rule 138 (Estatuto -> Asignacion .)
    ID              reduce using rule 138 (Estatuto -> Asignacion .)
    RB              reduce using rule 138 (Estatuto -> Asignacion .)


state 61

    (97) faID -> ID .
